-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.15.0 RC
-
Windows 10 IoT Enterprise 2019 LTSC where the firewall blocks both in- & outbound connections by default.
-
-
bc175fb62a1d2aba9c98ba761d5e21d3d7426678 (qt/qtwebengine/dev) c597f4bff14b11cc2d3fd9139b2afcff8a79cc1b (qt/qtwebengine/6.2) 8cbd59dd304688401525bfd96d558e6e8b53da8d (qt/qtwebengine/5.15)
QtWebEngine seem to perform network connections through a separate QtWebEngineProcess.exe process. This can cause firewall configuration problems for locked-down systems, since whitelisting the Qt application EXE isn't sufficient to enable networking . Networking instead need to enabled by whitelisting QtWebEngineProcess.exe. However, this will also enable networking for any other QtWebEngine application installed to the same folder, which can be problematic.
Request
Please make it possible to make the QtWebEngine network communication in-process, so that firewall whitelisting becomes safe & intuitive. It would be preferable if in-process networking could be enabled through either a project build flag or run-time API.
Steps to reproduce
- Build WebEngine Qt Quick Minimal Example.
- Configure Windows Defender Firewall to block all outbound connections by default (see screenshot).
- Whitelist "minimal.exe" in Windows Defender Firewall.
- Start "minimal.exe".
- Observe that app isn't able to display the web page.
- is duplicated by
-
QTBUG-84122 In process networking for WebEngine to make firewall rules simpler
-
- Closed
-
- relates to
-
QTBUG-88575 Spawned QtWebEngineProcess(es) aren't killed after WebEngineView destruction
-
- Closed
-
- split to
-
QTBUG-131833 Single Executable WebEngine
-
- Reported
-
| For Gerrit Dashboard: QTBUG-84105 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 242152,15 | Support running as a single executable | dev | qt/qtwebengine | Status: NEW | -1 | 0 |
| 300036,4 | Add NetworkServiceInProcess feature documentation | 5.15 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 300037,3 | Document abiltiy to set QTWEBENGINE_CHROMIUM_FLAGS from within app | 5.15 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 378897,4 | Re-enable network-service-in-process | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 380977,2 | Re-enable network-service-in-process | 6.2 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 380978,2 | Re-enable network-service-in-process | 5.15 | qt/qtwebengine | Status: MERGED | +2 | 0 |