Re-enable network-service-in-process

The network-service isn't sandboxed anyway, so there is no added
security by the process separation.

Fixes: QTBUG-84105
Change-Id: Ie3fbda26f0cf8f31166b37a8537b7e1b6d11b560
Reviewed-by: Kirill Burtsev <kirill.burtsev@qt.io>
(cherry picked from commit bc175fb62a1d2aba9c98ba761d5e21d3d7426678)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>